My First Program

--- a/site/index.html
+++ b/site/index.html
@@ -6,5 +6,6 @@
 <body>
 	<h1>maruti lifestyle</h1>
 	<h2> home creating your lifestyle</h2>
+	<h3>available plots aapartment bunglow</h3>
 </body>
 </html>
